syntax = "proto3";

package location;
option go_package = "/location";

//import "google/api/annotations.proto";
//import "models.proto";

message CreateLocationRequest{
	uint32 city_id = 1;
	float latitude = 2;
	float longitude = 3;
	string  address = 4;
}

message GetLocationsRequest{
    // Get all Locations
}

message GetLocationRequest{
    uint32 id = 1;
}

message UpdateLocationRequest{
    uint32 id = 1;
    uint32 city_id = 2;
	float latitude = 3;
	float longitude = 4;
	string  address = 5;
}

message DeleteLocationRequest{
    uint32 id = 1;
}

message GetLocationsResponse{
//    Location model
}

message Response{
    string message = 1;
}

service LocationService{
    rpc Create(CreateLocationRequest) returns (Response) {}
    /*    option (google.api.http) = {
            post = /api/Locations
        };
    */

    rpc GetLocations(GetLocationsRequest) returns (Response) {
        // option
    }

    rpc Get (GetLocationRequest) returns (Response) {
        // option
    }

    rpc Update (UpdateLocationRequest) returns (Response) {
        // option
    } 

    rpc Delete (DeleteLocationRequest) returns (Response) {
        // option
    }
}